--- a/#src/_about.html
+++ b/#src/_about.html
@@ -7,24 +7,21 @@
         <div class="why-us-points">
             <ul>
                 <li>
-                    <img src="images/quality.svg">
-                    Высокое качество
+                    <img src="images/quality.svg">Высокое качество
                 </li>
                 <li>
-                    <img src="images/best-price.svg">
-                    Приятные цены
+                    <img src="images/best-price.svg">Приятные цены
                 </li>
                 <li>
-                    <img src="images/contract.svg">
-                    Гарантия от производителя
+                    <img src="images/contract.svg">Гарантия от производителя
                 </li>
             </ul>
 
         </div>
 
         <div class="about-us-bg">
-            
-        </div>        
+
+        </div>
 
     </div>
 
