--- a/#src/index.html
+++ b/#src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +9,20 @@
 
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+
     @@include('_header.html')
     @@include('_promo.html')
-   <!-- @@include('_featured.html') -->
+    @@include('_featured.html')
     @@include('_about.html')
+    @@include('_subscription.html')
+    @@include('_location.html')
+    @@include('_footer.html')
 
     <script src="js/main.min.js"></script>
 </body>
+
 </html>
