--- a/#src/index.html
+++ b/#src/index.html
@@ -1,28 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <link rel="stylesheet" href="css/style.min.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="/css/style.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <title>Gamestock</title>
 </head>
-
 <body>
 
-    @@include('_header.html')
-    @@include('_promo.html')
-    @@include('_featured.html')
-    @@include('_about.html')
-    @@include('_subscription.html')
-    @@include('_location.html')
-    @@include('_footer.html')
+    <header>
 
-    <script src="js/main.min.js"></script>
+        <div class="container">
+
+            <div class="header">
+
+                <div class="logo-brand">
+                    <img src="/images/logo.svg">
+                </div>
+
+                <div class="navigation">
+
+                    <nav>
+                        <ul class="links">
+                            <li><a href="#" class="open-dropdown">Каталог</a>
+                        
+
+                            </li>
+                            <li><a href="#">Доставка</a></li>
+                            <li><a href="#">Самовывоз</a></li>
+                            <li><a href="#">О нас</a></li>
+                            <li><a href="#">Поиск</a></li>
+                            <li><a href="#">Личный кабинет</a></li>
+                        </ul>
+                    </nav>
+
+                </div>
+
+                <div class="cart">
+                    <span class="cart-icon"></span>
+                    0 руб.
+                </div>
+
+                <div class="dropdown-container">
+                    <nav>
+
+                        <ul>
+                            <li>Аксессуары</li>
+                            <li><a href="#">Клавиатуры</a></li>
+                            <li><a href="#">Мыши</a></li>
+                            <li><a href="#">Наушники</a></li>
+                            <li><a href="#">Геймпады</a></li>
+                            <li><a href="#">Рули</a></li>
+                            <li><a href="#">Игровая мебель</a></li>
+                            <li><a href="#">VR-Аксессуары</a></li>
+                        </ul>
+
+                        <ul>
+                            <li>Компьютьеры</li>
+                            <li><a href="#">Системные блоки</a></li>
+                            <li><a href="#">Ноутбуки</a></li>
+                            <li><a href="#">Моноблоки</a></li>
+                            <li><a href="#">Игры для ПК</a></li>
+                        </ul>
+
+                        <ul>
+                            <li>Консоли</li>
+                            <li><a href="#">Playstation</a></li>
+                            <li><a href="#">Игры для Playstation</a></li>
+                            <li><a href="#">Xbox</a></li>
+                            <li><a href="#">Игры для Xbox</a></li>
+                        </ul>
+
+                        <ul>
+                            <li>Комплектующие</li>
+                            <li><a href="#">Видеокарты</a></li>
+                            <li><a href="#">Процессоры</a></li>
+                            <li><a href="#">Оперативная память</a></li>
+                            <li><a href="#">Материнские платы</a></li>
+                            <li><a href="#">Охлаждение</a></li>
+                            <li><a href="#">Прочее</a></li>
+                        </ul>
+
+                        <ul>
+                            <li>Мониторы</li>
+                            <li><a href="#">16х9</a></li>
+                            <li><a href="#">16х10</a></li>
+                            <li><a href="#">4х3</a></li>
+                            <li><a href="#">Прочее</a></li>
+                        </ul>
+
+
+                    </nav>
+            </div>
+
+            </div>
+
+        </div>
+
+    </header>
+
+    <section class="hero-area">
+        <div class="container">
+                <div class="banner">
+                    <div class="hero-text">
+                        <h1>Игровая техника для <span>победителей</span></h1>
+                        <h2>Профессиональные аксессуары для лучших результатов</h2>
+                    </div>
+                </div>
+        </div>
+    </section>
+
+    <section class="featured-items">
+        <div class="container">
+                <div style="height: 1400PX;">
+                </div>
+        </div>
+    </section>   
+    
 </body>
+
+<script src="js/main.js"></script>
 
 </html>
